--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet" />
+    <script defer src="js/script.js" ></script>
+    <title>Strona o Marii</title>
+    <link rel="stylesheet" type="text/cs" href="css/style.css" />
+    <script type="tezt/javascript" src="js/script.js"></script>
+
+</head>
+
+<body>
+    <h1 style="naglowek">Maria Sklodoska-Curie</h1>
+     <p> Maria jest znana jako polsko-francuska fizyczka  podwójna noblistka laureatka nagrody nobla z fizyki i chemii. Ma ona meza Pierre'a Curie odkryl on promieniowanie uranu </p>
+     <h2> Co odkryła Maria Sklodoska-Curie  </h2>
+     <p>Maria Sklodoska-Curie odkryla razem z mezem promieniotworczego pierwiastka polonu</p>
+     <img src="/images/Marie Curie.png" alt="obrazek Marie Curie"/>
+</body>
+</html
+
+
 
